# rust-fun

fizzbuzz/: Cargo.toml
fizzbuzz/src/: fizzbuzz.rs  lib.rs  main.rs
fizzbuzz/src/fizzbuzzfolder/: fizzbuzzfile.rs  mod.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello/src/: main.rs
hello/src/models/: person.rs
oldfizzbuzz/: Cargo.toml
oldfizzbuzz/src/: main.rs
ownership/src/: main.rs
penguin-list/: Cargo.toml
penguin-list/migrations/: 20230726095437_penguin.sql
penguin-list/models/: penguin.rs
penguin-list/src/: main.rs
phrases/src/: lib.rs  main.rs
phrases/src/norwegian/: farewells.rs  greetings.rs
variables/: Cargo.toml
variables/src/: main.rs
