[package]
name = "penguin-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
dotenv = "0.15.0"
reqwest = { version = "0.11.18", features = ["json"]}
serde = "1.0.175"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.29.1", features = ["full"] }
